# HoneySat

./: .gitignore  LICENSE  README.md  efren_passes.py  passes.csv  pyvenv.cfg  telecommands_1year.csv  telecommands_dataset.csv  telecommands_sample_100_anomalies.csv  telecommands_year_anomalies.csv  with_anomalies.csv
Scripts/: activate  activate.bat
deployment/: README.md  docker-compose-ccsds.yaml  docker-compose-csp.yaml
deployment/configs/: csp_webpage.env
deployment/projects/raccoon-wrapper/: Cargo.toml  Dockerfile.production  LICENSE  README.md  docker-entrypoint.sh
deployment/projects/raccoon-wrapper/rccn-mdb/: adcs.py  eps.py  obc.py  service-adcs.xml  service-obc.xml
deployment/projects/raccoon-wrapper/src/hs_zmq_interface/: Cargo.toml
deployment/projects/raccoon-wrapper/src/hs_zmq_interface/src/: hs_commands.rs  lib.rs  zmq_interface.rs
deployment/projects/raccoon-wrapper/src/rccn_usr/: Cargo.toml
deployment/projects/raccoon-wrapper/src/rccn_usr/src/: lib.rs  types.rs
deployment/projects/raccoon-wrapper/src/rccn_usr/src/pus/: app.rs  mod.rs
deployment/projects/raccoon-wrapper/src/rccn_usr/src/pus/parameter_management_service/: command.rs  service.rs
deployment/projects/raccoon-wrapper/src/rccn_usr/src/pus/service/: mod.rs
deployment/projects/raccoon-wrapper/src/rccn_usr_comm/: Cargo.toml
deployment/projects/raccoon-wrapper/src/rccn_usr_comm/src/: config.rs  frame_processor.rs  main.rs  transport.rs
deployment/projects/raccoon-wrapper/src/rccn_usr_example_app/: Cargo.toml
deployment/projects/raccoon-wrapper/src/rccn_usr_example_app/src/: main.rs
deployment/projects/raccoon-wrapper/src/rccn_usr_honeysat_app/: Cargo.toml
deployment/projects/raccoon-wrapper/src/rccn_usr_honeysat_app/src/: main.rs
deployment/projects/raccoon-wrapper/src/rccn_usr_honeysat_app/src/adcs_service/: command.rs  service.rs
deployment/projects/raccoon-wrapper/src/rccn_usr_honeysat_app/src/eps_service/: command.rs  service.rs
deployment/projects/raccoon-wrapper/src/rccn_usr_honeysat_app/src/obc_service/: command.rs  service.rs
deployment/projects/raccoon-wrapper/src/vacuum_test_node/: Cargo.toml
evaluation/: .gitignore  ML_README.md  dataset_telecommands.py  extrapolate_telecommands_dataset.py  inject_anomalies.py  inject_pass_anomalies.py  requirements.txt  train_isolation_forest.py
evaluation/experiment-1/: .gitignore  csp_webpage.env  docker-compose-ccsds.yaml  docker-compose-csp.yaml  honeysat-api.env  honeysat-webpage-v2.env  input.env  run-experiment-ccsds.sh  run-experiment-csp.sh
evaluation/experiment-1.3/: commands.txt
evaluation/experiment-2/: csp_webpage.env  (+7 more)
(+87 files in other folders)
