[package]
name = "rccn_usr_comm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde_yaml = "0.9.34"
serde = { version = "1.0.213", features = ["derive"] }
ccsds_protocols = { git = "https://gitlab.com/rccn/ccsds-protocols-rs", rev = "599c3244c927f9ff1fba94a816b7ab131d594790" } # JR: Changed it to commit number, beacuse ccsds_protocols got updates with incrementing the version number
crossbeam-channel = "0.5"
futures = "0.3.31"
async-std = "1.13.0"
rccn_usr = { version = "0.1.0", path = "../rccn_usr" }
thiserror = "1.0.65"
spacepackets = "0.12.0"
tokio = "1.41.1"
zenoh = "1.0.3"
async-trait = "0.1.83"

[package.metadata.ros]
# install_to_lib doesn't seem to work on cargo-ament-build 0.1.8 or 0.1.9
install_to_share = ["etc"]
